--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,4 +1,17 @@
-.social-logo {
-    height: 0.2rem;
-    width: 0.2rem;
+@import "./settings.scss";
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 16px 0;
+    box-sizing: border-box;
+}
+
+.social-icon {
+    max-height: 32px;
+    max-width: 32px;
+    margin: 4px;
 }
