--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -37,7 +37,7 @@
     width: 40%;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: $mobile-breakpoint) {
     .navbar {
         padding: 0;
         height: 3rem;
