--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -16,6 +16,7 @@
     margin: 1rem;
     padding: 1rem;
     border-radius: 20px;
+    line-height: 1.5;
 }
 
 @media only screen and (max-width: $mobile-breakpoint) {
