--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -8,6 +8,7 @@
     width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.75);
     padding: 0.75rem 1rem;
+    background-color: $background-dark;
 }
 
 .home-link,
@@ -52,10 +53,10 @@
         font-size: $font-lg;
         padding-bottom: 0.75rem;
         margin-right: 1.5rem;
-        color: $background;
+        color: $background-dark;
     }
 
     .link:hover {
-        color: $text-highlight;
+        color: $background;
     }
 }
