--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -1,16 +1,29 @@
 @import "./settings.scss";
 
-.image-wrapper {
+.project-wrapper {
     display: grid;
-    grid-template-columns: repeat(1fr, 6);
-    grid-template-areas: "";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
+        "title . ."
+        "image image description";
+}
+
+.image-wrapper {
+    grid-area: image;
+    width: 100%;
 }
 
 .image-title {
-}
-
-.image {
+    grid-area: title;
+    margin-left: 2rem;
+    font-size: $font-lg;
 }
 
 .image-description {
+    grid-area: description;
+    background-color: $background-dark;
+    margin: 0 0.5rem;
+    padding: 1rem;
+    line-height: 1.5;
+    border-radius: 10px;
 }
