--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,8 +4,7 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: -Roboto, apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
-        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: $primary-font;
     background-color: $background;
     color: $text-main;
 }
