--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -1,11 +1,20 @@
 /* Colors */
+/*
 $text-main: hsla(355, 18%, 12%, 1);
 $text-highlight: rgb(136, 119, 122);
 $background: rgb(235, 221, 213);
-$background-dark: darken($background, 10%);
+$background-dark: darken($background, 5%);
 
 $prussian-blue: hsla(205, 63%, 18%, 1);
 $raisin-black-2: hsla(224, 18%, 12%, 1);
+*/
+
+$text-main: hsl(208, 47%, 12%);
+$text-highlight: darken(hsl(225, 29%, 11%), 5%);
+$background: hsl(204, 67%, 92%);
+$background-dark: lighten(hsl(204, 56%, 83%), 5%);
+
+$prussian-blue: hsla(205, 63%, 18%, 1);
 
 /* Font sizes */
 $font-xl: 3rem;
@@ -14,4 +23,9 @@ $font-md: 1.1rem;
 $font-sm: 1rem;
 $font-xs: 0.8rem;
 
+/* Mobile */
 $mobile-breakpoint: 768px;
+
+/* Fonts */
+$primary-font: -Roboto, apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
