about page restyled

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -2,32 +2,38 @@
 
 .profile-layout {
     display: flex;
-    width: 100%;
+    width: min(80%, 80rem);
 }
 
 .profile-pic {
-    max-height: 50rem;
-    max-width: 50%;
+    max-width: 25rem;
+    max-height: auto;
+    margin: auto;
 }
 
 .bio-text {
     color: $text-main;
-    background-color: $background-dark;
+    font-size: $font-md;
     margin: 1rem;
     padding: 1rem;
     border-radius: 20px;
     line-height: 1.5;
+    max-width: 60rem;
 }
 
-@media only screen and (max-width: $mobile-breakpoint) {
+//small screen breakpoint
+@media only screen and (max-width: 1120px) {
     .profile-layout {
         flex-direction: column;
-        width: 80%;
     }
+}
 
+//mobile breakpoint
+@media only screen and (max-width: $mobile-breakpoint) {
     .bio-text {
         padding: 0;
         margin: 1rem 0 0;
         background-color: unset;
+        font-size: small;
     }
 }
