--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -4,6 +4,7 @@ $text-main: hsla(355, 18%, 12%, 1);
 $text-highlight: rgb(136, 119, 122);
 $background: rgb(235, 221, 213);
 $background-dark: darken($background, 5%);
+$background-darker: darken($background, 15%);
 
 /*
 
