woodworking styling, modals added

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -34,6 +34,6 @@
         padding: 0;
         margin: 1rem 0 0;
         background-color: unset;
-        font-size: small;
+        font-size: $font-sm;
     }
 }
