--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -16,11 +16,12 @@ $background-dark: lighten(hsl(204, 56%, 83%), 5%);
 $prussian-blue: hsla(205, 63%, 18%, 1);
 */
 /* Font sizes */
+$font-xxl: 4rem;
 $font-xl: 3rem;
 $font-lg: 1.5rem;
 $font-md: 1.2rem;
 $font-sm: 1rem;
-$font-xs: 0.8rem;
+$font-xs: 0.9rem;
 
 /* Mobile */
 $mobile-breakpoint: 768px;
