several styling changes

--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -9,9 +9,11 @@
     padding: 0 10% 2rem;
 }
 
+/*
 .projects-container .project-wrapper:nth-child(odd) {
     background-color: $background-dark;
 }
+*/
 
 .image-wrapper {
     grid-area: image;
