--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -7,8 +7,8 @@
     top: 0;
     width: 100%;
     border-bottom: 1px solid darken($background-darker, 50%);
-    padding: 0.75rem 1rem;
-    background-color: $background-darker;
+    padding: 1rem 1.5rem;
+    //background-color: $background-darker;
 }
 
 .home-link,
