--- a/styles/Page.module.scss
+++ b/styles/Page.module.scss
@@ -14,6 +14,7 @@
     line-height: 1.15;
     font-size: $font-xxl;
     font-weight: 550;
+    font-family: "Josefin Sans", sans-serif;
 }
 
 .title,
